--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Tesis Azcona-Massacesi",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "nodemon api/index.js"
   },
   "author": "Azcona-Masaccesi",
   "license": "ISC",
@@ -24,5 +25,8 @@
     "hardhat-gas-reporter": "^1.0.9",
     "solidity-coverage": "^0.8.2",
     "typechain": "^8.2.0"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
