--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "nodemon api/index.js"
+    "serve": "node api/index.js"
   },
   "author": "Azcona-Masaccesi",
   "license": "ISC",
@@ -27,6 +27,7 @@
     "typechain": "^8.2.0"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   }
 }
