--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@codemirror/theme-one-dark": "^6.1.2",
+    "@replit/codemirror-lang-solidity": "^6.0.1",
     "axios": "^1.4.0",
+    "bootstrap-vue": "^2.23.1",
+    "codemirror": "^6.0.1",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-codemirror": "^6.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.15",
