--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "node api/index.js"
+    "dev": "node api/index.js"
   },
   "author": "Azcona-Masaccesi",
   "license": "ISC",
@@ -23,6 +23,7 @@
     "ethers": "^5.7.2",
     "hardhat": "^2.14.0",
     "hardhat-gas-reporter": "^1.0.9",
+    "nodemon": "^3.0.1",
     "solidity-coverage": "^0.8.2",
     "typechain": "^8.2.0"
   },
