--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pm2": "^5.3.0"
   }
 }
